# HDConeAPI

./: .gitignore  CMakeLists.txt  README.md  build.sh  cpugpu.sh
CPUGPU/: CMakeLists.txt  Makefile  build.sh  main.cpp
CPUGPU/data/: README
FPGA/: buildNeural.sh
FPGA/.ipynb_checkpoints/: buildInference-checkpoint.sh  buildOneshot-checkpoint.sh
FPGA/src/: hdcinference.cpp  hdcneuralhd.cpp
FPGA/src/.ipynb_checkpoints/: hdcinference-checkpoint.cpp  hdcneuralhd-checkpoint.cpp  hdconeshot-checkpoint.cpp
